[gd_scene load_steps=2 format=3 uid="uid://0g10r0q38tuq"]

[ext_resource type="Script" uid="uid://cw3c1rtetm36v" path="res://quiz.gd" id="1_kninm"]

[node name="quiz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kninm")

[node name="hiragana" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.14400001
anchor_right = 0.5
anchor_bottom = 0.14400001
offset_left = -44.0
offset_top = -26.312004
offset_right = 44.0
offset_bottom = 26.687996
grow_horizontal = 2
theme_override_font_sizes/font_size = 38
text = "aaaa"

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.50003
offset_top = -20.0
offset_right = 286.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="choice1" type="Button" parent="buttons"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="choice2" type="Button" parent="buttons"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="choice3" type="Button" parent="buttons"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[connection signal="pressed" from="buttons/choice1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="buttons/choice2" to="." method="_on_choice_2_pressed"]
[connection signal="pressed" from="buttons/choice3" to="." method="_on_choice_3_pressed"]
